# catkin_ws

./: .gitignore  README.md
src/line_mexatron/: CMakeLists.txt  package.xml
src/line_mexatron/config/: joints.yaml
src/line_mexatron/launch/: display.launch  gazebo.launch
src/line_mexatron/meshes/: ballcaster.stl  breadboard.stl  chassis.stl  chassis_rsz.stl  wheel.stl
src/line_mexatron/src/: motor_controller.cpp  planner.py
src/line_mexatron/urdf/: line_mexatron.urdf
src/line_mexatron/world/: course.material
src/mexatron/: CMakeLists.txt  package.xml
src/mexatron/launch/: display.launch  gazebo.launch
src/mexatron/meshes/: pcb.stl  pcb_rsz.stl
src/mexatron/urdf/: mexatron.urdf
src/sonar_mexatron/robot/: CMakeLists.txt  package.xml
src/sonar_mexatron/robot/launch/: display.launch  gazebo.launch
src/sonar_mexatron/robot/src/: obstacle_avoidance.py
src/sonar_mexatron/robot/urdf/: sonar_mexatron.urdf
src/sonar_mexatron/robot/worlds/: house.world
src/wall_mexatron/: CMakeLists.txt  package.xml
src/wall_mexatron/launch/: display.launch  gazebo.launch
src/wall_mexatron/meshes/: ballcaster_rsz.stl  breadboard_rsz.stl  wheel_rsz.stl
src/wall_mexatron/models/: model.sdf
src/wall_mexatron/rviz/: rviz.rviz  urdf.rviz
src/wall_mexatron/src/: follow_wall.py
src/wall_mexatron/urdf/: wall_mexatron.urdf
src/wall_mexatron/worlds/: brick_wall.world
